tests/NormalTests/paczka1/fuzzy1/82679590.err
Error in line 8: 9Qk4CXWOfV S61 29,2
Error in line 2: A176 A176 34,6
Error in line 15: lKX3 S61 169,53
Error in line 12: A176 S61 53,8
Error in line 3: 6ZkKr95 S61 58,4
Error in line 13: lKX3 S61 37,3
